--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.515.0",
     "next": "15.2.4",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1"
